# rustlang-hello-world-lib

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml  test.yml
src/: lib.rs
