[package]
name = "ludndev-hello-world"
version = "0.1.0"
edition = "2021"
description = "A Rust crate for greeting people."
keywords = ["rust", "greeting", "hello"]
license-file = "LICENSE"
homepage = "https://crates.io/crates/ludndev-hello-world"
repository = "https://github.com/ludndev/rustlang-hello-world-lib"
documentation = "https://docs.rs/ludndev-hello-world/0.1.0/ludndev_hello_world/"

[dependencies]
